# EugeneLib

./: .gitignore  .gitmodules  AGENT.md  CMakeLists.txt  CMakeSettings.json  EugeneLib.sln  EugeneLib.vcxproj  EugeneLib.vcxproj.filters  FragmentShader.spv  README.md  VertexShader.spv  build.bat
.github/: README.md  copilot-instructions.md  workflows.yml
.github/workflows/: develop.yml  main.yml
DirectX12Debug/: EugeneLib.idb
Document/Doxygen/: Doxyfile
Document/Doxygen/html/: _buffer_resource_8h_source.html  _color_8h.html  _color_8h__incl.map  _color_8h__incl.md5  _color_8h_source.html  _command_list_8cpp.html  _command_list_8cpp__incl.map  _command_list_8cpp__incl.md5  _command_list_8h.html  _command_list_8h__dep__incl.map  _command_list_8h__dep__incl.md5  _command_list_8h__incl.map  _command_list_8h__incl.md5  _command_list_8h_source.html  _debug_8cpp.html  _debug_8cpp__incl.map  _debug_8h.html  _debug_8h__dep__incl.map  _debug_8h__incl.map  _debug_8h__incl.md5  _debug_8h_source.html  _depth_stencil_views_8cpp.html  _direct_x_math_8h.html  (+2267 more)
Document/PlantUml/: ClassDiagram.wsd
EugeneLib/: EugeneLib.sln
EugeneLib/EugeneLib/: CMakeLists.txt  EugeneLib.vcxproj  EugeneLib.vcxproj.filters  LibBuild.bat  pch.h  resource.h  test.bat
EugeneLib/EugeneLib/Include/: Color.h  EugeneLib.h  EugeneLibException.h  Math.h  MathConcepts.h  Vector2.h  Vector3.h
EugeneLib/EugeneLib/Include/Common/: Debug.h  EugeneLibException.h
EugeneLib/EugeneLib/Include/Graphics/: CommandList.h  DepthStencilViews.h  GpuEngine.h  GpuResource.h  Graphics.h  GraphicsCommon.h  GraphicsPipeline.h  IndexView.h  RenderTargetViews.h  Shader.h  ShaderResourceViews.h  Texture.h  TextureLoader.h  VertexView.h
EugeneLib/EugeneLib/Include/Math/: Geometry.h  MathConcepts.h  Vector2.h  Vector3.h
EugeneLib/EugeneLib/Include/Sound/: Sound.h  Sound3DControl.h  SoundBase.h  SoundCommon.h  SoundControl.h  SoundSpeaker.h  Wave.h
EugeneLib/EugeneLib/Include/System/: DynamicLibrary.h  GamePad.h  KeyID.h  System.h
EugeneLib/EugeneLib/Source/: EugeneLib.cpp  EugeneLibException.cpp  Math.cpp
EugeneLib/EugeneLib/Source/Common/: Debug.cpp  EugeneLibException.cpp
EugeneLib/EugeneLib/Source/Graphics/: CommandList.cpp  DepthStencilViews.cpp  GpuEngine.cpp  GpuResource.cpp  Graphics.cpp  GraphicsPipeline.cpp  IndexView.cpp  RenderTargetViews.cpp  Shader.cpp  ShaderResourceViews.cpp  Texture.cpp  TextureLoader.cpp  VertexView.cpp
EugeneLib/EugeneLib/Source/Graphics/DirectX12/: Dx12CommandList.cpp  Dx12CommandList.h  Dx12DefaultResource.cpp  Dx12DefaultResource.h  Dx12DepthStencilViews.cpp  Dx12DepthStencilViews.h  Dx12GpuEngine.cpp  Dx12GpuEngine.h  Dx12GpuResource.cpp  Dx12GpuResource.h  Dx12Graphics.cpp  Dx12Graphics.h  Dx12GraphicsPipeline.cpp  Dx12GraphicsPipeline.h  Dx12IndexView.cpp  Dx12IndexView.h  Dx12RenderTargetViews.cpp  Dx12RenderTargetViews.h  Dx12ShaderResourceViews.cpp  Dx12ShaderResourceViews.h  Dx12UploadableResource.cpp  Dx12UploadableResource.h  Dx12VertexView.cpp  Dx12VertexView.h  Dx12Views.cpp  Dx12Views.h
EugeneLib/EugeneLib/Source/Math/: Geometry.cpp
EugeneLib/EugeneLib/Source/Sound/: Sound.cpp  Sound3DControl.cpp  SoundBase.cpp  SoundControl.cpp  SoundSpeaker.cpp  Wave.cpp
EugeneLib/EugeneLib/Source/Sound/Xaudio2/: Xa2Sound.cpp  Xa2Sound.h  Xa2Sound3DControl.cpp  Xa2Sound3DControl.h  Xa2SoundControl.cpp  Xa2SoundControl.h  Xa2SoundSpeaker.cpp  Xa2SoundSpeaker.h
EugeneLib/EugeneLib/Source/System/: DynamicLibrary.cpp  GamePad.cpp  System.cpp
EugeneLib/EugeneLib/Source/System/Windows/: Dll.cpp  Dll.h  WindowsSystem.cpp  WindowsSystem.h
EugeneLib/Sample/: PixelShader.hlsl  PixelShader.pso  Sample.vcxproj  VertexShader.hlsl  VertexShader.vso  main.cpp
EugeneLib/SampleProject/: SampleProject.vcxproj
EugeneLib/クラス図/: クラス図.wsd
Include/: Color.h  EugeneLib.h
Include/Common/: ArgsSpan.h  Debug.h  EugeneLibException.h  RefPtr.h  RingBuffer.h
Include/Debug/: Debug.h
Include/Graphics/: BufferResource.h  CommandList.h  DepthStencilViews.h  GpuEngine.h  GpuResource.h  Graphics.h  GraphicsCommon.h  GraphicsPipeline.h  Image.h  ImageResource.h  IndexView.h  RenderTargetViews.h  ResourceBindLayout.h  Sampler.h  SamplerViews.h  Shader.h  ShaderResourceViews.h  Texture.h  VertexView.h
Include/Math/: Geometry.h  Math.h  MathConcepts.h  Quaternion.h  Random.h  Vector2.h  Vector3.h
Include/Sound/: OggVorbis.h  Sound.h  Sound3DControl.h  SoundBase.h  SoundCommon.h  SoundControl.h  SoundFile.h  SoundSpeaker.h  SoundStreamFile.h  SoundStreamSpeaker.h  Wave.h
Include/System/: DynamicLibrary.h  GamePad.h  KeyID.h  NetSocket.h  System.h  SystemCommon.h
Include/Utils/: ArgsSpan.h  Array.h  EugeneLibException.h  Hash.h  HashMap.h  RingBuffer.h  SharedPtr.h  SpinLock.h  Utils.h
Sample/: 3DVertexShader.hlsl  CMakeLists.txt  CompileHLSL.bat  Compute.spv  ComputeShader.comp  ComputeShader.cso  ComputeShader.hlsl  FragmentShader.frag  Logo.dds  LogoArray.dds  LogoComp.dds  LogoMipmap.dds  MultiRenderTargetPS.hlsl  MultiRenderTargetPS.pso  PixelShader.hlsl  PixelShader.pso  Sample.vcxproj  Sample.vcxproj.filters  VertexShader.hlsl  VertexShader.spv  VertexShader.vert  VertexShader.vso  imgui.ini  main.cpp  ps.pso  sky.dds  vs.vso
Source/Common/: Debug.cpp  EugeneLibException.cpp
Source/Debug/: Debug.cpp
Source/Graphics/: BufferResource.cpp  CommandList.cpp  DdsLoad.h  DepthStencilViews.cpp  GpuEngine.cpp  GpuResource.cpp  Graphics.cpp  GraphicsPipeline.cpp  Image.cpp  ImageResource.cpp  IndexView.cpp  RenderTargetViews.cpp  ResourceBindLayout.cpp  Sampler.cpp  SamplerViews.cpp  Shader.cpp  ShaderResourceViews.cpp  Texture.cpp  VertexView.cpp
Source/Math/: Geometry.cpp  Math.cpp  Quaternion.cpp  Random.cpp  Vector3.cpp
Source/Sound/: OggVorbis.cpp  OggVorbis.h  Sound.cpp  Sound3DControl.cpp  SoundBase.cpp  SoundControl.cpp  SoundFile.cpp  SoundSpeaker.cpp  SoundStreamFile.cpp  SoundStreamFile.h  SoundStreamSpeaker.cpp  Wave.cpp  Wave.h
Source/System/: DynamicLibrary.cpp  GamePad.cpp  NetSocket.cpp  System.cpp
Source/Utils/: EugeneLibException.cpp
Test/: CMakeLists.txt  test.cpp
(+1137 files in other folders)
